# ai-project

./: .gitignore  README.md  config.example.yaml  config.yaml  main.py  pyproject.toml
agent/: __init__.py  bootstrap.py  executor.py  main_agent.py  models.py  plan_store.py  registry.py  session_store.py  state.py  worker.py
agent/a2a/: __init__.py  client.py  config.py  dispatcher.py  models.py  protocol.py  server.py  tools.py  transport.py  worker.py
agent/core/: __init__.py  base_agent.py  events.py  models.py  registry.py  signals.py
agent/executor/: __init__.py  executor.py  worker.py
agent/main/: __init__.py  __main__.py  agent.py  command.py  commands.py  prompts.py  repl.py  tools.py  tui.py
docs/: plan_executor_design.md
graph/: graph_builder.py  test_e2e.py  test_interrupt.py
mcp/: __init__.py  client.py  manager.py  models.py  tools.py
store/: __init__.py  ingest_task.py  long_term_memory_persistency.py  plan.py  session.py
tests/: test_a2a_http.py
tools/: __init__.py  agent.py  arxiv_search.py  bash.py  edit.py  firecrawl.py  glob.py  grep.py  mcp.py  paper_kb.py  rag.py  read.py  skills.py  skills_manager.py  task.py  tavily.py  web.py  write.py
utils/: __init__.py  bm25.py  chunk_enricher.py  chunk_model.py  chunk_pipeline.py  compact.py  config.py  embedding.py  file_loader.py  hybrid_search.py  langsmith.py  llm.py  mcp_client.py  paper_parser.py  pdf_preprocessor.py  preload.py  query_rewriter.py  reranker.py  retriever.py  semantic_chunker.py  structure_chunker.py  text_splitter.py  token_counter.py  vector_store.py
(+83 files in other folders)
