[project]
name = "agent-dev-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypdf>=4.0.0",
    "unstructured>=0.12.0",
    "anthropic>=0.40.0",
    "chainlit>=1.0",
    "chromadb>=0.5.0",
    "click>=8.0",
    "duckduckgo-search>=5.0",
    "firecrawl-py>=0.1.0",
    "httpx>=0.27",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "langsmith>=0.1.0",
    "mcp>=1.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "rich-toolkit>=0.1",
    "tavily-python>=0.4",
    "tenacity>=8.0",
    "typer>=0.9",
    "sentence-transformers>=2.2.0",
    "python-docx>=1.2.0",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
